# amourithm

./: .env.example  Cargo.toml  tables.sql
migrations/: 20241216124841_init.sql
src/: database.rs  main.rs
src/auth/: auth.rs  jwt.rs  mod.rs  utils.rs
src/common/: error.rs  mod.rs
src/connections/: database.rs  mod.rs  redis.rs
src/user/: user.rs
